--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <h1>let's drink</h1>
             <p>
-                We love sharing a cup of coffee with people. We bring over 30 years industry experience and passion to Neo-Flex. With coffee that is brewed passionately to numb your taste buds with an experience that you are sure to remember.
+                 sharing a cup of coffee with people. We bring over 30 years industry experience and passion to Neo-Flex. With coffee that is brewed passionately to numb your taste buds with an experience that you are sure to remember.
             </p>
             <a href="https://javahouseafrica.com/our-products/" target="_blank">Make a reservation</a>
         </main>
